--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -3,13 +3,16 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .courses {
+
   table {
     border-collapse: collapse;
+    table-layout: fixed;
   }
 
   table tr td {
-    padding: 5px;
+    padding: 3px;
     vertical-align: top;
+
   }
 
   .list_image {
@@ -17,20 +20,14 @@
     height: 105px;
   }
 
-  .price {
-  	dt{
-  		color:	#244;
-  		font-weight:  bold;
-  		font-size: larger;
-  	}
-
-  	dd{
-  		margin: 0, 0;
-  	}
+  .author{
+      font-size: x-small;
+      text-align: center;
+      margin: 0;
+      width: 90px;
   }
 
   .list_description {
-    width: 60%;
 
     dl {
       margin: 0;
@@ -51,6 +48,19 @@
     font-size:    x-small;
     text-align:   right;
     padding-left: 1em;
+    width: 60px;
+    }
+
+  .bottom_row {
+    td {
+      height: 10px;
+    }
+  }
+
+  .price {
+      color:  #244;
+      font-weight:  bold;
+      font-size: small;
   }
 
   .list_line_even {
