--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -37,8 +37,8 @@
     <%= f.text_field :credit %>
   </div>
   <div class="field">
-    <%= f.label :pdf %><br />
-    <%= f.file_field :pdf %>
+    <%= f.label :document %><br />
+    <%= f.file_field :document %>
   </div>
   <div class="field">
     <%= f.label :photo %><br />
