--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -20,7 +20,7 @@
     <%= link_to 'PDF', course.document.url, target: "_blank" %><br/>
     <%= link_to('Content', {:action => 'content', :id => course.id}) %><br/>
     <%= link_to("Edit", {:action => 'edit', :id => course.id}, :class => 'action edit') %><br/>
-    <%= link_to('Destroy', {:action => 'destroy', :id => course.id}) %><br/>
+    <%= link_to("Destroy", {:action => 'destroy', :id => course.id}) %><br/>
   </td>
 </tr>
 
